# pro

./: .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  README.md  README_SETUP.md  code_graph_debug.py  debug_shadow.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  scorecard_test.md
config/: semgrep_rules.yaml
datasets/: flask_pr5818.json  poisoned_inputs.json  shadow_dataset_flask_20260115_040449.json  shadow_dataset_flask_20260115_044134.json
docs/: engineer_journey.md  principal_ai_architecture.md  principal_ai_vision.md
reports/: scorecard_issue-001_20260115_013634.md  scorecard_issue-001_20260115_014800.md  scorecard_issue-001_20260115_015516.md  scorecard_issue-001_20260115_020147.md  scorecard_issue-001_20260115_025143.md  scorecard_issue-001_20260115_031958.md  scorecard_issue-001_20260115_032129.md  scorecard_issue-001_20260115_032756.md  scorecard_issue-001_20260115_045259.md  scorecard_issue-001_20260115_045943.md  scorecard_issue-001_20260115_050032.md  scorecard_issue-001_20260115_050246.md  scorecard_issue-001_20260115_050758.md  scorecard_issue-001_20260115_050818.md  scorecard_issue-001_20260115_050905.md  scorecard_issue-001_20260115_051135.md  scorecard_issue-001_20260115_051940.md  scorecard_issue-001_20260115_052515.md  scorecard_issue-001_20260115_053136.md  scorecard_issue-001_20260115_053604.md  scorecard_issue-001_20260115_054022.md  scorecard_issue-001_20260115_054500.md  scorecard_issue-001_20260115_055253.md  scorecard_issue-001_20260115_055800.md  scorecard_issue-001_20260115_064408.md  shadow_results.json  (+52 more)
(+34 files in other folders)
